--- a/test/Contract.t.sol.in
+++ b/test/Contract.t.sol.in
@@ -29,27 +29,81 @@ contract ContractTest is Test {
         unit = addr;
     }
 
+    // testRead verifies the contract returns the expected beacon root.
     function testRead() public {
+        // Store timestamp and root at expected indexes.
         vm.store(unit, timestamp_idx(), timestamp());
         vm.store(unit, root_idx(), root);
 
+        // Read root associated with current timestamp.
         (bool ret, bytes memory data) = unit.call(bytes.concat(timestamp()));
-
         assertTrue(ret);
         assertEq(data, bytes.concat(root));
     }
 
+    // testUpdate verifies the set functionality of the contract.
     function testUpdate() public {
+        // Simulate pre-block call to set root.
         vm.prank(sysaddr);
         (bool ret, bytes memory data) = unit.call(bytes.concat(root));
-
         assertTrue(ret);
         assertEq(data, hex"");
 
+        // Verify timestamp.
         bytes32 got = vm.load(unit, timestamp_idx());
         assertEq(got, timestamp());
 
+        // Verify root.
         got = vm.load(unit, root_idx());
         assertEq(got, root);
+    }
+
+    // testRingBuffers verifies the integrity of the ring buffer is maintained
+    // as the write indexes loop back to the start and begin overwriting
+    // values.
+    function testRingBuffers() public {
+        for (uint256 i = 0; i < 10000; i += 1) {
+            bytes32 pbbr = bytes32(i*1337);
+
+            // Simulate pre-block call to set root.
+            vm.prank(sysaddr);
+            (bool ret, bytes memory data) = unit.call(bytes.concat(pbbr));
+            assertTrue(ret);
+            assertEq(data, hex"");
+
+            // Call contract as normal account to get beacon root associated
+            // with current timestamp.
+            (ret, data) = unit.call(bytes.concat(timestamp()));
+            assertTrue(ret);
+            assertEq(data, bytes.concat(pbbr));
+
+            // Skip forward 12 seconds.
+            skip(12);
+        }
+    }
+
+
+    // testHistoricalReads verifies that it is possible to read all previously
+    // saved values in the beacon root contract.
+    function testHistoricalReads() public {
+        uint256 start = block.timestamp;
+
+        // Saturate storage with fake roots.
+        for (uint256 i = 0; i < 8192; i += 1) {
+            bytes32 pbbr = bytes32(i*1337);
+            vm.prank(sysaddr);
+            (bool ret, bytes memory data) = unit.call(bytes.concat(pbbr));
+            assertTrue(ret);
+            assertEq(data, hex"");
+            skip(12);
+        }
+
+        // Attempt to read all values in same block context.
+        for (uint256 i = 0; i < 8192; i += 1) {
+            bytes32 time = bytes32(uint256(start+i*12));
+            (bool ret, bytes memory got) = unit.call(bytes.concat(time));
+            assertTrue(ret);
+            assertEq(got, bytes.concat(bytes32(i*1337)));
+        }
     }
 }
